# testomat_tests

./: .gitignore  README.md  example.env  pyproject.toml  pytest.ini  requirements.txt
src/: __init__.py
src/core/: __init__.py  base_component.py  base_page.py
src/data_type_experiments/: numbers_exp.py  string_exp.py
src/utils/: __init__.py  helpers.py
src/web/: Application.py  __init__.py  constants.py
src/web/components/: ProjectCard.py  ProjectsPageHeader.py  SideBar.py  __init__.py  project_card.py  projects_page_header.py  side_bar.py
src/web/pages/: HomePage.py  LoginPage.py  NewProjectsPage.py  ProjectPage.py  ProjectsPage.py  __init__.py  home_page.py  login_page.py  new_projects_page.py  project_page.py  projects_page.py
tests/: config.py  conftest.py  first_test.py
tests/data/: __init__.py  test_data.py
tests/web/: login_page_test.py  new_projects_page_test.py  project_creation_page_test.py  projects_page_test.py
